@@ -1,58 +1,42 @@
 package net.minestom.server.command.builder.arguments;
 
+import net.minestom.server.command.StringReader;
 import net.minestom.server.command.builder.NodeMaker;
-import net.minestom.server.command.builder.exception.ArgumentSyntaxException;
+import net.minestom.server.command.builder.exception.CommandException;
 import net.minestom.server.network.packet.server.play.DeclareCommandsPacket;
-import net.minestom.server.utils.StringUtils;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class ArgumentLoop<T> extends Argument<List<T>> {
 
-    public static final int INVALID_INPUT_ERROR = 1;
-
-    private final List<Argument<T>> arguments = new ArrayList<>();
+    private final List<Argument<T>> arguments;
 
     @SafeVarargs
     public ArgumentLoop(@NotNull String id, @NotNull Argument<T>... arguments) {
-        super(id, true, true);
-        this.arguments.addAll(Arrays.asList(arguments));
+        super(id);
+        this.arguments = List.of(arguments);
     }
 
-    @NotNull
     @Override
-    public List<T> parse(@NotNull String input) throws ArgumentSyntaxException {
+    public @NotNull List<T> parse(@NotNull StringReader input) throws CommandException {
+        int pos = input.position();
         List<T> result = new ArrayList<>();
-        final String[] split = input.split(StringUtils.SPACE);
 
-        final StringBuilder builder = new StringBuilder();
-        boolean success = false;
-        for (String s : split) {
-            builder.append(s);
-
-            for (Argument<T> argument : arguments) {
-                try {
-                    final String inputString = builder.toString();
-                    final T value = argument.parse(inputString);
-                    success = true;
-                    result.add(value);
-                    break;
-                } catch (ArgumentSyntaxException ignored) {
-                    success = false;
+        for (int i = 0; i < this.arguments.size(); i++) {
+            try {
+                result.add(arguments.get(i).parse(input));
+            } catch (CommandException exception) {
+                input.position(pos);
+                throw exception;
+            }
+            if (i != this.arguments.size() - 1) {
+                if (!input.canRead() || !StringReader.isValidWhitespace(input.peek())) {
+                    throw CommandException.COMMAND_EXPECTED_SEPARATOR.generateException(input.all(), pos);
                 }
+                input.skipWhitespace();
             }
-            if (success) {
-                builder.setLength(0); // Clear
-            } else {
-                builder.append(StringUtils.SPACE);
-            }
-        }
-
-        if (result.isEmpty() || !success) {
-            throw new ArgumentSyntaxException("Invalid loop, there is no valid argument found", input, INVALID_INPUT_ERROR);
         }
 
         return result;
